# ClawOPC

./: .gitignore  README.md  pyproject.toml
roles/boss/: identity.md  role.md  soul.md
roles/boss/skills/: create-task.md  make-decision.md  manage-team.md
roles/content-writer/: identity.md  role.md  soul.md
roles/content-writer/skills/: edit-content.md  write-copy.md
roles/data-analyst/: identity.md  role.md  soul.md
roles/data-analyst/skills/: data-analysis.md  metrics-design.md
roles/designer/: identity.md  role.md  soul.md
roles/designer/skills/: design-review.md  design-ui.md
roles/developer/: identity.md  role.md  soul.md
roles/developer/skills/: code-review.md  write-code.md  write-tech-doc.md
roles/marketing/: identity.md  role.md  soul.md
roles/marketing/skills/: campaign-planning.md  marketing-strategy.md
roles/product-manager/: identity.md  role.md  soul.md
roles/product-manager/skills/: competitor-analysis.md  write-prd.md
roles/qa/: identity.md  role.md  soul.md
roles/qa/skills/: quality-review.md  write-test-plan.md
spec/: 01-Overview.md  02-Architecture.md  03-Workspace.md  04-Task-Lifecycle.md  05-Task-MD-Standard.md  06-Worklog-Standard.md  07-Employee-Skill.md  08-Role-Standard.md  09-Console-Standard.md  10-OpenClaw-Standard.md
