[project]
name = "clawopc"
version = "0.1.0"
description = "AI-powered One Person Company operating system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "clawopc-core",
    "clawopc-console",
    "clawopc-cli",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
clawopc-core = { workspace = true }
clawopc-console = { workspace = true }
clawopc-cli = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/*/src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode chars — Chinese Markdown templates use fullwidth punctuation
    "B008",    # function call in default argument — FastAPI Depends() is standard usage
]

[tool.ruff.lint.isort]
known-first-party = ["clawopc_core", "clawopc_console", "clawopc_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
